fix footer spacing

--- a/todo-app/src/sass/components/App.scss
+++ b/todo-app/src/sass/components/App.scss
@@ -42,7 +42,7 @@
 
   &__footer {
     margin-top: 50px;
-    margin-bottom: 2em;
+    padding-bottom: 2em;
     color: $lightGrayishBlue;
     text-align: center;
   }
